# tensorflow_musa_extension

./: .pre-commit-config.yaml  CMakeLists.txt  README.en.md  README.md  build.sh  setup.py
musa_ext/kernels/: musa_add_op.cc  musa_assign_op.cc  musa_cast_op.cc  musa_concat_op.cc  musa_const_op.cc  musa_equal_op.cc  musa_expand_dims_op.cc  musa_fused_batchnorm_op.cc  musa_fused_matmul_op.cc  musa_gather_op.cc  musa_identity_op.cc  musa_layernorm_op.cc  musa_logical_or_op.cc  musa_matmul_op.cc  musa_maximum_op.cc  musa_mean_op.cc  musa_pack_op.cc  musa_placeholder_op.cc  musa_prod_op.cc  musa_random_op.cc  musa_relu_op.cc  musa_reshape_op.cc  musa_resource_variable_op.cc  musa_select_op.cc  musa_shape_op.cc  musa_sigmoid_op.cc  musa_sign_kernel.mu  musa_sign_op.cc  musa_sqrt_op.cc  musa_stopgradient_op.cc  musa_tensorinteraction_op.cc  utils_op.cc  utils_op.h
musa_ext/kernels/array/: musa_identity_op.cc  musa_reverse_v2_op.cc  musa_tensorlist_fromtensor_op.cc
musa_ext/kernels/control_flow/: musa_stateless_while_op.cc
musa_ext/kernels/fusion/: RGProjection_fusion.cc  clip_fusion.cc  concat_matmul_fusion.cc  fuselayernormv2_fusion.cc  fusion_pattern_manager.cc  gelu_fusion.h  layernorm_fusion.h  matmul_biasadd_fusion.cc  matmul_biasadd_fusion.h  musa_fused_matmul_op.cc  prelu_fusion.cc  prelu_fusion.h  reshape_matmul_fusion.cc  shifted_affine_map_fusion.h  sigmoid_calibration_fusion.h  tensordot_bias_fusion.cc  tensordot_bias_fusion.h  tokenmixer_fusion.h
musa_ext/kernels/kernels/: musa_SquaredDifference_op.cc  musa_add_op.cc  musa_addn_op.cc  musa_applyadam_op.cc  musa_argmax_op.cc  musa_biasadd_grad_op.cc  musa_broadcast_gradient_args_op.cc  musa_broadcast_to_op.cc  musa_cast_kernels.mu  musa_concat_offset_op.cc  musa_concat_op.cc  musa_const_op.cc  musa_div_no_nan_op.cc  musa_equal_op.cc  musa_exp_op.cc  musa_floor_mod_op.cc  musa_gather_nd_op.cc  musa_gather_op.cc  musa_identity_op.cc  musa_invertpermutation_kernel.mu  musa_log1p_op.cc  musa_log_op.cc  musa_logging_ops.cc  musa_logical_or_op.cc  musa_lookup_table_ops.cc  musa_matmul_op.cc  musa_merge_v2_checkpoints_op.cc  musa_mutable_hash_table_op.cc  musa_pow_op.cc  musa_random_op.cc  musa_range_kernel.mu  musa_range_op.cc  musa_relu_grad_op.cc  musa_relu_op.cc  musa_restore_v2_op.cc  musa_rsqrt_op.cc  musa_save_v2_op.cc  musa_shape_op.cc  musa_sharded_filename_op.cc  musa_sigmoid_op.cc  (+13 more)
musa_ext/kernels/logging/: musa_logging_ops.cc
musa_ext/kernels/nn/: musa_softplus_op.cc
musa_ext/kernels/training/: musa_resource_apply_nadam_kernel.mu  musa_resource_apply_nadam_op.cc
musa_ext/model/Wukong/: analyze.py  debug_copy.py  debug_graph_var.py
musa_ext/model/Wukong/exp/: analyze.py  train_tensorflow_wukong_on_criteo_kaggle_dataset.py  train_wukong_musa_tqdm.py
musa_ext/model/Wukong/logs/tensorflow/2026-02-09-07.48.17/tensorboard/: events.out.tfevents.1770623297.worker31066.901278.5.v2
musa_ext/model/Wukong/model/: analyze.py  test_embedding_model.py  test_lr_model.py  test_mlp_model.py  test_wukong.py  wukong.py
musa_ext/mu/: device_register.cc  runtime_config_c_api.h
musa_ext/mu/device/: musa_allocator.h  musa_device.cc  musa_device.h  musa_host_allocator.h  musa_stream.h
musa_ext/mu/mu/: device_register.cc
musa_ext/mu/mu/device/: musa+%d  musa_device.cc  musa_device.h  musa_executor.h  musa_platform.cc  musa_stream.h
musa_ext/mu/optimizer/: musa_graph_optimizer.cc  musa_remapper_optimizer.cc
python/: __init__.py  _runtime_config.py  _runtime_config_bindings.cc
test/: gather_op_test.py  interact_op_test.py  layernorm_op_test.py  matmul_op_test.py  musa_test_utils.py  run_all_tests.sh  sigmoid_op_test.py  sign_op_test.py  test_runner.py
test/fusion/: fused_matmul_op_test.py  layernorm_fusion_test.py
test/ops/: interact_op_test.py  layernorm_op_test.py  resource_apply_nadam_op_test.py
